@@ -82,7 +82,7 @@ Server.prototype.close = function(callback) {
 };
 
 Server.prototype.isConnected = function() {
-  return this.connectionPool && this.connectionPool.isConnected();
+  return this.connectionPool != null && this.connectionPool.isConnected();
 }
 
 Server.prototype.allServerInstances = function() {
